LDEV-4239: Initial implementation of Monitor tour.

--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -305,6 +305,40 @@ button.edit.class.add.all  =Add all
 force.complete.learner.command.message  =The instructor has moved you to another activity.
 index.emailnotifications  =Notifications
 label.email  =Email
-
+label.tour  =Tour
+tour.intro.title  =Monitor Tour
+tour.intro.content  =This short tour will show you the features of the LAMS Monitoring screen. You can stop the tour at any time by clicking End Tour, and restart it again by clicking on the Tour button.
+tour.end.title  =End Of Tour
+tour.end.content  =Thank you for taking the tour. To restart the tour, click the Tour button again. Remember you can get more help on Monitoring by clicking the Help button on each tab.
+tour.tab.selection.title=Tab Selection
+tour.tab.selection.content=<p>Monitoring is broken into three areas, accessed by these titles at the top of the page.</p><p><strong>Lesson</strong> gives the overall lesson details.</p><p><strong>Sequence</strong> gives an overview of the lesson sequence and is used to access the activities within the lesson.</p><p><strong>Learners</strong> shows the details about each learner.</p>
+tour.tab.refresh.content=Updates the screen.
+tour.help.content=Additional help may be accessed using the Help button.
+tour.lesson.state.content=<p>Click on the current status to change the status. The lesson can be Started, Suspended, Archived or Removed.</p></p><strong>Started</strong> or Activated lessons are available for learners to participate in.</p></p><strong>Suspended</strong> or Disabled lessons are lessons that have been disabled by a monitor. Learners cannot see but not access disabled lessons. Learners currently in the lesson (with a learner window open) can progress through the lesson.</p><p><strong>Archived</strong> lessons do not appear on learner's main screen, but are available for Monitors to view.</p><p><strong>Removed</strong> lessons are removed altogether and cannot be retrieved.</p>
+tour.lesson.count.learners.content=<p>This area shows the number of learners who have started the sequence so far, and the total number of learners who are able to access the sequence.</p><p>Note that this does NOT indicate the number of learners online at this moment, but rather how many learners have joined the sequence since it was started.</p>
+tour.learner.in.class.content=<p>Display the learners in the class. From the resulting learner list you can email a particular learner.</p>
+tour.edit.class.content=<p>Add or Remove learners from the lesson.</p>
+tour.email.notifications.content=<p>Send an email notification to one or more learners. Notifications can be scheduled for later sending.</p>
+tour.lesson.im.content=<p>Click on <strong>Presence</strong> to allow learners to see who is currently online. </p><p>Once Presence is on, the number of learners online is shown on the Presence button. Click <strong>Instant Messaging</strong> to allow learners to message each other.</p><p>Click on Presence and Instant Messaging again to disable.</p><p>View the learners' messages using <strong>Open IM</strong>.</p>
+tour.completion.chart.content=<p>Graph showing the proportion of learners who have not started the lesson, are in progress or have completed the lesson. Hover over the graph sections to see the percentages.</p>
+tour.tab.sequence.content=The sequence tab allows you to manage where learners are in the sequence or make changes to the lesson sequence.
+tour.activity.content=<p>Double click on any activity to see the details for that activity</p>
+tour.move.learners.title=View and Move Learners
+tour.move.learners.small.content=<p>If you have a small number of learners in an activity, hover over each person icon in an activity to find the right learner, then click on the learner to open a view of their current activity or click and drag the icon to move them to another activity</p>
+tour.move.learners.affect.content=<p>Moving a learner forward to a new activity marks them as completed in the earlier activity or activities, without the learner completing the activity themselves.</p>
+tour.move.learners.large.content=<p>If you have a large number of learners in an activity, click on the group/people icon on the top right of the activity. This will bring up a box allowing you to select one or more learners to move, or to see the current activity view for a particular learner.</p>
+tour.completed.learners.title=Completed Learners
+tour.completed.learners.content=<p>The completed learners appear at the bottom of the screen. To make a learner complete the lesson, click and drag the learner's icon from their current activity to this area at the bottom of the screen.</p>
+tour.learner.search.title=Learner Search
+tour.learner.search.content=<p>Enter a first name, last name or login to search for a learner.</p>
+tour.live.edit.title=Live Edit
+tour.live.edit.content=<p>Change the lesson sequence. You can only change the parts not yet accessed by learners, such as adding new activities later in the sequence.</p>
+tour.tab.learners.content=<p>Learners gives a learner by learner view of lesson progression. More learners are available via paging.</p>
+tour.learners.progress.content=<p>Blue circles indicate activities which have been completed by the learner.</p><p>Red squares indicate the current position of the learner in the sequence</p><p>Green triangles represent activities not yet reached.</p>
+tour.completion.sorting.title=Sorting
+tour.completion.sorting.content=<p>Turn on to sort the completed learners first or turn off to sort alphabetically.</p>
+tour.journal.entries.content=<p>View the entries in the learner's journal. These are entries are made in Learner, using the <strong>Save to Journal</strong> option in the <strong>Notebook</strong>.</p>
+tour.email.content=<p>Send an email to a particular learner.</p>
+tour.this.is.disabled=This function is disabled while the tour is running.
 
 #======= End labels: Exported 299 labels for en AU =====
