LDEV-4239: Monitor tour with wiki help button moved onto tour dialog.

--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -309,11 +309,10 @@ label.tour  =Tour
 tour.intro.title  =Monitor Tour
 tour.intro.content  =This short tour will show you the features of the LAMS Monitoring screen. You can stop the tour at any time by clicking End Tour, and restart it again by clicking on the Tour button.
 tour.end.title  =End Of Tour
-tour.end.content  =Thank you for taking the tour. To restart the tour, click the Tour button again. Remember you can get more help on Monitoring by clicking the Help button on each tab.
+tour.end.content  =<p>Thank you for taking the tour. To restart the tour, click the Tour button again.</p><p>For further help, click on the <strong>More</strong> button below.</p>
 tour.tab.selection.title=Tab Selection
 tour.tab.selection.content=<p>Monitoring is broken into three areas, accessed by these titles at the top of the page.</p><p><strong>Lesson</strong> gives the overall lesson details.</p><p><strong>Sequence</strong> gives an overview of the lesson sequence and is used to access the activities within the lesson.</p><p><strong>Learners</strong> shows the details about each learner.</p>
 tour.tab.refresh.content=Updates the screen.
-tour.help.content=Additional help may be accessed using the Help button.
 tour.lesson.state.content=<p>Click on the current status to change the status. The lesson can be Started, Suspended, Archived or Removed.</p></p><strong>Started</strong> or Activated lessons are available for learners to participate in.</p></p><strong>Suspended</strong> or Disabled lessons are lessons that have been disabled by a monitor. Learners cannot see but not access disabled lessons. Learners currently in the lesson (with a learner window open) can progress through the lesson.</p><p><strong>Archived</strong> lessons do not appear on learner's main screen, but are available for Monitors to view.</p><p><strong>Removed</strong> lessons are removed altogether and cannot be retrieved.</p>
 tour.lesson.count.learners.content=<p>This area shows the number of learners who have started the sequence so far, and the total number of learners who are able to access the sequence.</p><p>Note that this does NOT indicate the number of learners online at this moment, but rather how many learners have joined the sequence since it was started.</p>
 tour.learner.in.class.content=<p>Display the learners in the class. From the resulting learner list you can email a particular learner.</p>
@@ -340,5 +339,8 @@ tour.completion.sorting.content=<p>Turn on to sort the completed learners first 
 tour.journal.entries.content=<p>View the entries in the learner's journal. These are entries are made in Learner, using the <strong>Save to Journal</strong> option in the <strong>Notebook</strong>.</p>
 tour.email.content=<p>Send an email to a particular learner.</p>
 tour.this.is.disabled=This function is disabled while the tour is running.
-
+tour.prev=Prev
+tour.next=Next
+tour.more.help=More
+tour.end.tour=End Tour
 #======= End labels: Exported 299 labels for en AU =====
