LDEV-4239: I18N the buttons on the main tour.

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -743,5 +743,9 @@ error.attachment.executable  =Uploaded file is executable
 label.upload.info  =Uploaded file must not be executable and not exceed size of {0}
 label.file  =File
 
+tour.prev=Prev
+tour.next=Next
+tour.end.tour=End Tour
+
 
 #======= End labels: Exported 735 labels for en AU =====
