LDEV-4283: Change the refreshing auto time from 5 mins to 1 min

--- a/lams_learning/conf/language/lams/ApplicationResources.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources.properties
@@ -30,7 +30,7 @@ label.gate.waiting.learners  ={0} out of {1} are waiting in front of the gate.
 label.gate.refresh.message  =Click Next if you are told that the gate is open. This page will refresh automatically in 1 minute.
 label.gate.preview.message  =As this is a preview, clicking Next will go to the next activity. Normally the learner would have to wait until the gate is opened.
 label.view.groups.title  =Groups
-label.view.view.groups.wait.message  =Some of your following tasks require a group. You cannot continue until the groups have been selected. Click Next if you are told that the groups have been created. This page will refresh automatically in 5 minutes.
+label.view.view.groups.wait.message  =Some of your following tasks require a group. You cannot continue until the groups have been selected. Click Next if you are told that the groups have been created. This page will refresh automatically in 1 minute.
 label.grouping.preview.message  =As this is a preview, clicking Next will do an automatic grouping. Normally the learner would have to wait until the grouping is done.
 message.window.closing  =Please close this window.
 mynotes.title  =My Notes
