LDEV-4275: Creating a simplified version of gradebook export. Added support for central alignment in an excel spreadsheet as well as another border style.

--- a/lams_gradebook/conf/language/lams/ApplicationResources.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources.properties
@@ -90,8 +90,8 @@ label.group  =Group
 label.max.possible  =Max possible
 label.total.actuals  =Total actuals
 label.max.mark  =Max mark
-label.actuals  =Actuals
-label.max  =Max
+label.actuals  =TOTAL
+label.max  =Max Mark Available
 label.overall.totals  =Overall totals
 audit.lesson.change.mark  =Changed mark for user {0}. LessonId: {1}. Old mark: {2}, new mark: {3}
 audit.activity.change.mark  =Changed mark for user {0}. LessonId: {1}. ActivityId:{2}. Old mark: {3}, new mark: {4}
@@ -104,6 +104,5 @@ gradebook.monitor.show.dates  =Show dates
 gradebook.monitor.hide.dates  =Hide dates
 gradebook.export.excel  =Export grades
 label.select.lessons.to.export  =Select lessons to export
-
-
+label.simplified.export=Simplified Export (only scores)
 #======= End labels: Exported 98 labels for en AU =====
