--- a/lams_gradebook/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources_en_AU.properties
@@ -90,8 +90,8 @@ label.group  =Group
 label.max.possible  =Max possible
 label.total.actuals  =Total actuals
 label.max.mark  =Max mark
-label.actuals  =Actuals
-label.max  =Max
+label.actuals  =TOTAL
+label.max  =Max Mark Available
 label.overall.totals  =Overall totals
 audit.lesson.change.mark  =Changed mark for user {0}. LessonId: {1}. Old mark: {2}, new mark: {3}
 audit.activity.change.mark  =Changed mark for user {0}. LessonId: {1}. ActivityId:{2}. Old mark: {3}, new mark: {4}
