LDEV-4277 Missing comment from the comment email.

--- a/lams_tool_notebook/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_notebook/conf/language/lams/ApplicationResources.properties
@@ -107,7 +107,7 @@ button.submit  =Finish
 message.monitoring.summary.no.session  =No sessions available
 label.notify.learner  =Send email with comment to learner
 event.teacher.comment.subject  =Teacher has left a comment for your notebook entry.
-event.teacher.comment.body  =Comment:
+event.teacher.comment.body  =Comment: {0}
 label.click.to.edit  =Click to edit
 label.notebook.entries  =Notebook entries
 label.user.name  =Name
