--- a/lams_tool_notebook/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_notebook/conf/language/lams/ApplicationResources_es_ES.properties
@@ -109,7 +109,7 @@ button.submit  =Finalizar
 message.monitoring.summary.no.session  =No hay sesiones disponibles
 label.notify.learner  =Enviar email con comentario al estudiante
 event.teacher.comment.subject  =El instructor ha dejado un comentario.
-event.teacher.comment.body  =Comentario:
+event.teacher.comment.body  =Comentario: {0}
 label.click.to.edit  =Editar
 label.notebook.entries  =Anotaciones
 label.user.name  =Nombre
