--- a/lams_tool_leader/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_leader/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = leader
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 04:07:15 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Mar 22 19:55:36 CST 2017 
  
 #=================== labels for Leader selection =================# 
 
@@ -48,14 +48,14 @@ output.desc.user.is.leader  =\u00bfEs estudiante un l\u00edder?
 label.group.leader  =L\u00edder del Grupo:
 label.are.you.going.to.be.leader  =\u00bfVas a ser el l\u00edder de este grupo?
 label.leader.selection  =Selecci\u00f3n de l\u00edder
-label.users.from.group  =Estudiantes que participan en el grupo:
+label.users.from.group  =Estudiantes en el grupo:
 label.yes.become.leader  =S\u00ed, quiero ser el l\u00edder
 label.no  =No
 label.refresh  =Actualizar
 label.waiting.for.leader  =Por favor, espera mientras alguien se convertir\u00e1 en l\u00edder del grupo.
 label.manage.leaders  =Gestione l\u00edderes
 label.plese.select.leaders  =Por favor, elija l\u00edderes
-label.no.leader.yet  =no
+label.no.leader.yet  =No hay l\u00edder seleccionado. Una vez que el l\u00edder haya sido elegido, podr\u00e1 continuar a la siguiente actividad.
 heading.leader  =L\u00edder del Grupo
 monitoring.label.group  =Grupo
 
