--- a/lams_tool_leader/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_leader/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = leader
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 04:07:16 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Mar 22 19:55:40 CST 2017 
  
 #=================== labels for Leader selection =================# 
 
@@ -48,14 +48,14 @@ output.desc.user.is.leader  =Is learner a leader
 label.group.leader  =Group leader:
 label.are.you.going.to.be.leader  =Are you going to be a leader of this group?
 label.leader.selection  =Leader selection
-label.users.from.group  =Learners participating in current group:
+label.users.from.group  =Learners in group:
 label.yes.become.leader  =Yes, I want to become a leader
 label.no  =No
 label.refresh  =Refresh
 label.waiting.for.leader  =Please, wait while somebody will become a group leader.
 label.manage.leaders  =Manage leaders
 label.plese.select.leaders  =Please, select leaders
-label.no.leader.yet  =no
+label.no.leader.yet  =No leader has been chosen yet. Once a leader is selected, you will be able to continue to the next activity
 heading.leader  =Group leader
 monitoring.label.group  =Group
 
