--- a/lams_tool_forum/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = forum
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Mar 02 01:24:05 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Mar 27 23:48:33 CST 2017 
  
 #=================== labels for Forum =================# 
 
@@ -243,6 +243,7 @@ js.error.validate.posting.number  =There is an error with the minimum and/or max
 js.error.validate.reply.number  =There is an error with the minimum and/or maximum number of posts per thread.
 label.topics  =Topics
 label.authoring.basic.resource.file.input  =File
+message.monitoring.edit.activity.not.editable  =Activity cannot longer be editted
 
 
-#======= End labels: Exported 237 labels for en AU =====
+#======= End labels: Exported 238 labels for en AU =====
