--- a/lams_tool_forum/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = forum
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Nov 27 06:04:02 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Mar 27 23:48:37 CST 2017 
  
 #=================== labels for Forum =================# 
 
@@ -242,6 +242,8 @@ error.min.rate.less.max  =El m\u00e1ximo numero de evaluaciones debe ser mayor a
 js.error.validate.posting.number  =Se ha encontrado un error con los m\u00ednimos y/o m\u00e1ximos de contribuciones. Por favor intente nuevamente.
 js.error.validate.reply.number  =Se ha encontrado un error con el  los m\u00ednimos y/o m\u00e1ximo de respuestas. Por favor intente nuevamente.
 label.topics  =Temas
+label.authoring.basic.resource.file.input  =Archivo
+message.monitoring.edit.activity.not.editable  =Esta actividad ya no se puede editar
 
 
-#======= End labels: Exported 236 labels for es ES =====
+#======= End labels: Exported 238 labels for es ES =====
