--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -579,6 +579,10 @@ authoring.fla.branch.mapping.condition.header  =Condition
 authoring.fla.branch.mapping.gate.header  =Gate
 authoring.fla.branch.mapping.branches.header  =Branches
 authoring.fla.branch.mapping.branch.header  =Branch
+authoring.fla.conditions.mapping.broken =Conditions in the activity were changed. Please review following activities as they referred the modified conditions:
+authoring.fla.activity.unnamed.description =unnamed
+authoring.fla.activity.gate.description =gate
+authoring.fla.activity.branching.description =branching
 authoring.fla.gate.state.mapping.dialog.title  =Map gate conditions
 authoring.fla.branch.mapping.dialog.title  =Match conditions to branches
 authoring.fla.gate.state.open  =open
