LDEV-4216 and LDEV-4127 adding labels

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Mar 02 00:35:56 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Mar 29 00:22:48 CST 2017 
  
 #=================== labels for LAMS Central =================# 
 
@@ -579,10 +579,6 @@ authoring.fla.branch.mapping.condition.header  =Condition
 authoring.fla.branch.mapping.gate.header  =Gate
 authoring.fla.branch.mapping.branches.header  =Branches
 authoring.fla.branch.mapping.branch.header  =Branch
-authoring.fla.conditions.mapping.broken =Conditions in the activity were changed. Please review following activities as they referred the modified conditions:
-authoring.fla.activity.unnamed.description =unnamed
-authoring.fla.activity.gate.description =gate
-authoring.fla.activity.branching.description =branching
 authoring.fla.gate.state.mapping.dialog.title  =Map gate conditions
 authoring.fla.branch.mapping.dialog.title  =Match conditions to branches
 authoring.fla.gate.state.open  =open
@@ -674,7 +670,6 @@ authoring.fla.page.prop.branching.sequences.max  =Max sequences:
 authoring.fla.page.prop.optional.activities.min  =Min activities:
 authoring.fla.page.prop.optional.activities.max  =Max activities:
 authoring.fla.page.prop.color  =Color:
-authoring.fla.page.prop.size  =Size:
 authoring.fla.page.dialog.cond.output.choose  =[ Choose Output ]
 authoring.fla.page.dialog.cond.options.choose  =[ Options ]
 authoring.fla.page.dialog.cond.greater  =Greater than or equal to
@@ -746,10 +741,14 @@ errors.maxfilesize  =Uploaded file exceeded maximum size: {0}
 error.attachment.executable  =Uploaded file is executable
 label.upload.info  =Uploaded file must not be executable and not exceed size of {0}
 label.file  =File
+authoring.fla.page.prop.size  =Size:
+authoring.fla.conditions.mapping.broken  =Conditions in the activity were changed. Please review following activities as they referred the modified conditions:
+authoring.fla.activity.unnamed.description  =unnamed
+authoring.fla.activity.gate.description  =gate
+authoring.fla.activity.branching.description  =branching
+tour.prev  =Prev
+tour.next  =Next
+tour.end.tour  =End of tour
 
-tour.prev=Prev
-tour.next=Next
-tour.end.tour=End Tour
 
-
-#======= End labels: Exported 735 labels for en AU =====
+#======= End labels: Exported 743 labels for en AU =====
