--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Mar 02 00:35:56 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Mar 29 00:22:48 CST 2017 
  
 #=================== labels for LAMS Central =================# 
 
@@ -741,6 +741,14 @@ errors.maxfilesize  =Uploaded file exceeded maximum size: {0}
 error.attachment.executable  =Uploaded file is executable
 label.upload.info  =Uploaded file must not be executable and not exceed size of {0}
 label.file  =File
+authoring.fla.page.prop.size  =Size:
+authoring.fla.conditions.mapping.broken  =Conditions in the activity were changed. Please review following activities as they referred the modified conditions:
+authoring.fla.activity.unnamed.description  =unnamed
+authoring.fla.activity.gate.description  =gate
+authoring.fla.activity.branching.description  =branching
+tour.prev  =Prev
+tour.next  =Next
+tour.end.tour  =End of tour
 
 
-#======= End labels: Exported 735 labels for en AU =====
+#======= End labels: Exported 743 labels for en AU =====
