LDEV-4072: fixing label

--- a/lams_tool_preview/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_preview/conf/language/lams/ApplicationResources_en_AU.properties
@@ -161,7 +161,7 @@ label.show.ratings.left.by.user  =After completion, show feedback left for other
 label.ratings.by.others  =Ratings left for you
 label.no.ratings.out.of.possible.ratings={0} rating(s) out of {1} possible ratings.
 
-label.export.team.results  =Export to spreadsheet
+label.export.team.results  =Export
 label.manage.users  =Manage users
 label.manage.users.description  =Uncheck all learners that should not be rated by others
 label.removed.user.warning  =The teacher has limited your ability to rate and be rated in this activity.
