LDEV-4300 Audit logs when activity is modified in monitor

--- a/lams_common/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_common/conf/language/lams/ApplicationResources_en_AU.properties
@@ -68,5 +68,9 @@ error.requires.existing.grouping  =Activity {0} requires existing grouping but n
 validation.error.GroupingNotUsed  =Grouping is not used in any of activities
 audit.change.mark  =Changed mark for user {0}. Old mark: {1}, new mark: {2}
 
+audit.started.editing.activity  =Teacher {0} has started editing activity {1} in monitor
+audit.finished.editing.activity  =Teacher {0} has finished editing activity {1} in monitor
+audit.cancelled.editing.activity  =Teacher {0} has cancelled editing activity {1} in monitor
+
 
 #======= End labels: Exported 61 labels for en AU =====
