LDEV-4300: adding labels

--- a/lams_common/conf/language/lams/ApplicationResources.properties
+++ b/lams_common/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = lams_common
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 17:06:13 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Apr 04 10:22:06 CST 2017 
  
 #=================== labels for LAMS Common =================# 
 
@@ -67,6 +67,9 @@ email.notifications.activity  =activity
 error.requires.existing.grouping  =Activity {0} requires existing grouping but no group for user {1} exists yet.
 validation.error.GroupingNotUsed  =Grouping is not used in any of activities
 audit.change.mark  =Changed mark for user {0}. Old mark: {1}, new mark: {2}
+audit.started.editing.activity  =Teacher {0} has started editing activity {1} in monitor
+audit.finished.editing.activity  =Teacher {0} has finished editing activity {1} in monitor
+audit.cancelled.editing.activity  =Teacher {0} has cancelled editing activity {1} in monitor
 
 
-#======= End labels: Exported 61 labels for en AU =====
+#======= End labels: Exported 64 labels for en AU =====
