--- a/lams_common/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_common/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = lams_common
 #language code: es 
 #locale code: ES 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Apr 04 10:22:11 CST 2017 
  
 #=================== labels for LAMS Common =================# 
 
@@ -64,6 +64,12 @@ email.notifications.lesson.caption  =Lecci\u00f3n
 email.notifications.lesson  =lecci\u00f3n
 email.notifications.tool  =herramienta
 email.notifications.activity  =actividad
+error.requires.existing.grouping  =Actividad {0} requiere que el usuario {1} este incluido en un grupo. Sin embargo, el usuario todavia no ha alcanzado la actividad de grupo.
+validation.error.GroupingNotUsed  =El grupo no se utiliza en ninguna de las actividades
+audit.change.mark  =Nota cambiado para el usuario {0}. Nota original: {1}, nota nueva: {2}
+audit.started.editing.activity  =el usuario {0} ha comenzado a editar la actividad {1} en monitoreo
+audit.finished.editing.activity  =el usuario {0} ha finalizado de editar la actividad {1} en monitoreo
+audit.cancelled.editing.activity  =el usuario {0} ha cancelado la edici\u00f3n de la actividad {1} en monitoreo
 
 
-#======= End labels: Exported 58 labels for es ES =====
+#======= End labels: Exported 64 labels for es ES =====
