LDEV-4301:Incurate pie chart in monitor.

--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -298,6 +298,7 @@ label.lesson.introduction  =Lesson introduction
 lesson.chart.title  =Lesson completion
 lesson.chart.started  =In progress
 lesson.chart.not.started  =Not started
+lesson.chart.not.completed  =Not completed
 lesson.chart.completed  =Completed
 class.add.all.confirm  =Do you want to add all learners to the class?
 class.add.all.success  =All learners were added to the class
