LDEV-4301: adding label

--- a/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = monitor_java
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 09 19:50:21 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Apr 05 02:35:02 CST 2017 
  
 #=================== labels for Monitor (Java) =================# 
 
@@ -305,6 +305,7 @@ button.edit.class.add.all  =Add all
 force.complete.learner.command.message  =The instructor has moved you to another activity.
 index.emailnotifications  =Notifications
 label.email  =Email
+lesson.chart.not.completed  =Not completed
 
 
-#======= End labels: Exported 299 labels for en AU =====
+#======= End labels: Exported 300 labels for en AU =====
