--- a/lams_monitoring/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = monitor_java
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 09 19:56:41 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Apr 05 02:35:06 CST 2017 
  
 #=================== labels for Monitor (Java) =================# 
 
@@ -305,6 +305,7 @@ button.edit.class.add.all  =Agregar a todos
 force.complete.learner.command.message  =El instructor le ha movido a otra actividad.
 index.emailnotifications  =Comunicaciones
 label.email  =Email
+lesson.chart.not.completed  =Sin finalizar
 
 
-#======= End labels: Exported 299 labels for es ES =====
+#======= End labels: Exported 300 labels for es ES =====
