LDEV-4239: Adding all labels to i18n (oops)

--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = monitor_java
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Apr 08 20:53:37 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Apr 08 21:06:51 CST 2017 
  
 #=================== labels for Monitor (Java) =================# 
 
@@ -357,6 +357,7 @@ tour.prev  =Prev
 tour.next  =Next
 tour.more.help  =More
 tour.end.tour  =End Tour
+label.tour  =Tour
 
 
-#======= End labels: Exported 351 labels for en AU =====
+#======= End labels: Exported 352 labels for en AU =====
