LDEV-4273: Initial check of Assessment's use of histogram.  Added a simple summary table of results to the first worksheet in the spreadsheet export - grouping the overall marks received. Modified the SQL code used to do the Monitor screen paging as the CASE appears to be causing the marks to sort as if they were strings, rather than numbers.

--- a/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
@@ -287,7 +287,7 @@ label.question.options  =Question options
 label.activity.completion  =End of activity
 label.notifications  =Notifications
 label.ask.for.hedging.justification  =Ask for hedging justification?
-label.number.learners.per.session  =Number of learners per session
+label.number.learners.per.session  =Number of learners
 label.tool.output  =Tool Output
 output.desc.best.score  =Best score
 label.tool.output.has.been.changed  =Tool Output has been changed
@@ -300,6 +300,8 @@ error.import.file.format  =The import file is not an .xml file.
 label.file  =File
 errors.maxfilesize  =File exceeds maximum file size {0}
 label.summary.downloaded  =Summary downloaded
-
-
+label.lowest.mark=Lowest Mark
+label.highest.mark=Highest Mark
+label.number.learners=Number of Learners
+label.percentage=Percentage
 #======= End labels: Exported 294 labels for en AU =====
