LDEV-4273: .xls export Question Summary tab now has a percentage summary for each question for Short Answer, Multiple Choice, Numerical, True & False.

--- a/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
@@ -304,4 +304,6 @@ label.lowest.mark=Lowest Mark
 label.highest.mark=Highest Mark
 label.number.learners=Number of Learners
 label.percentage=Percentage
+label.not.answered=Not Answered
+label.other=Other
 #======= End labels: Exported 294 labels for en AU =====
