--- a/lams_tool_forum/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,11 +2,11 @@ appName = forum
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Mar 01 23:54:04 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Apr 12 22:40:23 CST 2017 
  
 #=================== labels for Forum =================# 
 
-activity.title  =\u03a3\u03c5\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7(Forum)
+activity.title  =\u03a3\u03c5\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7 (Forum)
 activity.description  =\u0395\u03c1\u03b3\u03b1\u03bb\u03b5\u03af\u03bf \u03b3\u03b9\u03b1  \u03b1\u03c3\u03cd\u03b3\u03c7\u03c1\u03bf\u03bd\u03b7 \u03c3\u03c5\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7
 activity.helptext  =\u0395\u03c1\u03b3\u03b1\u03bb\u03b5\u03af\u03bf \u03a3\u03c5\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7\u03c2 \u03c7\u03c1\u03ae\u03c3\u03b9\u03bc\u03bf \u03b3\u03b9\u03b1 \u03c3\u03c5\u03bd\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b5\u03c2 \u03bc\u03b5\u03b3\u03ac\u03bb\u03b7\u03c2 \u03b4\u03b9\u03ac\u03c1\u03ba\u03b5\u03b9\u03b1\u03c2 \u03ba\u03b1\u03b9 \u03ba\u03b1\u03c4\u03b1\u03c3\u03c4\u03ac\u03c3\u03b5\u03b9\u03c2 \u03c0\u03bf\u03c5 \u03bf\u03b9 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03b9 \u03b4\u03b5\u03bd \u03b5\u03af\u03bd\u03b1\u03b9 \u03c3\u03c5\u03bd\u03b4\u03b5\u03b4\u03b5\u03bc\u03ad\u03bd\u03bf\u03b9 \u03c4\u03bf \u03af\u03b4\u03b9\u03bf \u03c7\u03c1\u03bf\u03bd\u03b9\u03ba\u03cc \u03b4\u03b9\u03ac\u03c3\u03c4\u03b7\u03bc\u03b1.
 tool.display.name  =\u0395\u03c1\u03b3\u03b1\u03bb\u03b5\u03af\u03bf \u03a3\u03c5\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7\u03c2 (forum)
@@ -193,7 +193,7 @@ label.postingLimits.topic.reminder.min  =\u039f \u03b5\u03bb\u03ac\u03c7\u03b9\u
 label.authoring.advanced.send.emails.to  =\u03a3\u03b5 \u03bd\u03ad\u03b5\u03c2 \u03b4\u03b7\u03bc\u03bf\u03c3\u03b9\u03b5\u03cd\u03c3\u03b5\u03b9\u03c2 \u03bd\u03b1 \u03c3\u03c4\u03ad\u03bb\u03bd\u03b5\u03c4\u03b1\u03b9 email \u03c3\u03c4\u03b7 \u03b4\u03b9\u03b5\u03cd\u03b8\u03c5\u03bd\u03c3\u03b7:
 label.authoring.advanced.learners  =\u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c5\u03c2
 label.authoring.advanced.teachers  =\u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03c4\u03ad\u03c2/\u03ba\u03b1\u03b8\u03b7\u03b3\u03b7\u03c4\u03ad\u03c2
-event.newposting.subject  =\u03a3\u03c5\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7(Forum):{0}
+event.newposting.subject  =\u03a3\u03c5\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7 (Forum):{0}
 event.newposting.body  ={0}:\n{1}\n\n-- e-mail \u03b1\u03c0\u03bf\u03c3\u03c4\u03ad\u03bb\u03bbe\u03c4\u03b1\u03b9/\u03b1\u03c0\u03bf\u03c3\u03c4\u03ad\u03bb\u03bb\u03bf\u03bd\u03c4\u03b1\u03b9 \u03b1\u03c5\u03c4\u03cc\u03bc\u03b1\u03c4\u03b1 \u03b1\u03c0\u03cc \u03c4\u03bf LAMS
 label.authoring.basic.do.you.want.to.delete  =\u0398\u03ad\u03bb\u03b5\u03c4\u03b5 \u03c0\u03c1\u03b1\u03b3\u03bc\u03b1\u03c4\u03b9\u03ba\u03ac \u03bd\u03b1 \u03b4\u03b9\u03b1\u03b3\u03c1\u03ac\u03c8\u03b5\u03c4\u03b5 \u03b1\u03c5\u03c4\u03cc \u03c4\u03bf \u03b8\u03ad\u03bc\u03b1;
 label.learning.number.of.votes  ={0} / {1} \u03c8\u03ae\u03c6\u03bf\u03c5\u03c2
@@ -242,6 +242,8 @@ error.min.rate.less.max  =\u039f \u03bc\u03ad\u03b3\u03b9\u03c3\u03c4\u03bf\u03c
 js.error.validate.posting.number  =\u03a5\u03c0\u03ac\u03c1\u03c7\u03b5\u03b9 \u03ad\u03bd\u03b1 \u03c3\u03c6\u03ac\u03bb\u03bc\u03b1 \u03c3\u03c4\u03bf \u03b5\u03bb\u03ac\u03c7\u03b9\u03c3\u03c4\u03bf \u03ae/\u03ba\u03b1\u03b9 \u03bc\u03ad\u03b3\u03b9\u03c3\u03c4\u03bf \u03c3\u03cd\u03bd\u03bf\u03bb\u03bf \u03b4\u03b7\u03bc\u03bf\u03c3\u03b9\u03b5\u03cd\u03c3\u03b5\u03c9\u03bd. \u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03bf\u03cd\u03bc\u03b5 \u03b5\u03bb\u03ad\u03b3\u03be\u03c4\u03b5 \u03ba\u03b1\u03b9 \u03c0\u03c1\u03bf\u03c3\u03c0\u03b1\u03b8\u03ae\u03c3\u03c4\u03b5 \u03be\u03b1\u03bd\u03ac.
 js.error.validate.reply.number  =\u03a5\u03c0\u03ac\u03c1\u03c7\u03b5\u03b9 \u03ad\u03bd\u03b1 \u03c3\u03c6\u03ac\u03bb\u03bc\u03b1 \u03bc\u03b5 \u03c4\u03bf \u03b5\u03bb\u03ac\u03c7\u03b9\u03c3\u03c4\u03bf \u03ae/\u03ba\u03b1\u03b9 \u03c4\u03bf \u03bc\u03ad\u03b3\u03b9\u03c3\u03c4\u03bf \u03b1\u03c1\u03b9\u03b8\u03bc\u03cc \u03c4\u03c9\u03bd \u03b4\u03b7\u03bc\u03bf\u03c3\u03b9\u03b5\u03cd\u03c3\u03b5\u03c9\u03bd/\u03c5\u03c0\u03bf\u03b2\u03bf\u03bb\u03ce\u03bd \u03b1\u03bd\u03ac \u03bd\u03ae\u03bc\u03b1.
 label.topics  =\u0398\u03ad\u03bc\u03b1\u03c4\u03b1
+label.authoring.basic.resource.file.input  =\u0391\u03c1\u03c7\u03b5\u03af\u03bf
+message.monitoring.edit.activity.not.editable  =H \u0394\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1 \u03b4\u03b5\u03bd \u03bc\u03c0\u03bf\u03c1\u03b5\u03af \u03c0\u03bb\u03ad\u03bf\u03bd \u03bd\u03b1 \u03b5\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03c4\u03b5\u03af.
 
 
-#======= End labels: Exported 236 labels for el GR =====
+#======= End labels: Exported 238 labels for el GR =====
