--- a/lams_learning/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = learner_java
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 00:56:57 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Wed Apr 12 22:47:31 CST 2017 
  
 #=================== labels for Learner (Java) =================# 
 
@@ -30,7 +30,7 @@ label.gate.waiting.learners  ={0} de {1} estas esperando en la puerta.
 label.gate.refresh.message  =Presione el bot\u00f3n de Continuar si la puerta se encuentra abierta. Esta pag\u00edna se autocargara en un minuto.
 label.gate.preview.message  =Como esta es una vista previa, presionando el bot\u00f3n de Continuar lo llevar\u00e1 a la siguiente actividad. Normalmente, el estudiante esperar\u00eda aqui hasta que esta puerta fuera abierta.
 label.view.groups.title  =Grupos
-label.view.view.groups.wait.message  =Algunas de las siguientes actividades requiren grupos. No se puede continuar hasta que los grupos no hayan sido definidos por el instructor. Presione el bot\u00f3n de Continuar si la puerta se encuentra abierta. Esta pag\u00edna se autocargara en 1 minuto.
+label.view.view.groups.wait.message  =Algunas de las siguientes actividades requiren grupos. No se puede continuar hasta que los grupos no hayan sido definidos por el instructor. Presione el bot\u00f3n de Continuar si la puerta se encuentra abierta. Esta pag\u00edna se autocargara en un minuto.
 label.grouping.preview.message  =Como esta es una vista previa, presionando el bot\u00f3n de Continuar seleccionar\u00e1 un grupo automaticamente. Normalmente, el estudiate(s) esperar\u00eda aqui hasta que el grupo sea formado.
 message.window.closing  =Por favor cierre esta ventana.
 mynotes.title  =Mis Anotaciones
